# chatti

./: CMakeLists.txt  README.md  chat.c  chat.h  client.c  log.c  log.h  network.c  network.h  server.c  ui.c  ui.h
.github/workflows/: server-client.yml
test/: CMakeLists.txt  test.h  test_chat.c  test_client_args.c  test_server_args.c
